Complete backend setup with CORS, JWT security, and verified endpoints